# cpp-template

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  local_repos.bzl
src/benchmark/: plot.py  plot_surface.ipynb
src/benchmark/outputs/: main_benchmark.csv
src/lib/: BUILD
src/main/: BUILD  main_filament.cc  main_flags_absl.cc  main_logger.cc  main_sdl.cc
tests/: BUILD
tests/gmock_demo/: expect_call_invoke.cc
tests/gtest_demo/: adding_traces.cc
