###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
## MODULE.bazel


# from bazel central
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.8.5")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")

# Load and use the local_repos extension
# use_extension("//:local_repos.bzl", "local_repos")

# Make the repositories defined by the extension available to the build
# use_repo("usr_local")

# Graphics related
bazel_dep(name = "rules_foreign_cc", version = "0.12.0") # support foreign build systems
bazel_dep(name = "glm", version = "1.0.0.bcr.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "sdl",
    urls = ["https://github.com/libsdl-org/SDL/archive/refs/tags/release-2.30.9.zip"],
    build_file = "//third_party:com_github_sdl.BUILD",
    sha256 = "91879ed23b540c619caf9bca66ae78ff721b77e47e3de2032b67846219ef5bb3",
    strip_prefix = "SDL-release-2.30.9",
)


# Dev dependencies
bazel_dep(name = "platforms", version = "0.0.10", dev_dependency = True)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

## NOTE: ORIGINAL HEDRON REPO (ALWAYS USE LATEST COMMIT)
# git_override(
#     module_name = "hedron_compile_commands",
#     remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
#     commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
#     # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
#     # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
# )

## NOTE: WORKAROUND REPO UNTIL ABOVE IS MERGED W/ FIX
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor.git",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)




